# fort

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml
patches/writing-a-c-compiler-tests/: 0001-add-fort-syntax-support.patch  README.md
scripts/: apply-cli-tests-patch.sh  save-cli-tests-patch.sh
src/: assemble.c  assemble.h  common.c  common.h  fort.c  lex.c  lex.h  parse.c  parse.h
test/: CMakeLists.txt  assemble_test.c  cli-test.sh  lex_test.c  parse_test.c  test.h
tools/: install-deps.sh
