function(fort_test TEST_NAME)
    file(GLOB TEST_FILE "${FORT_TEST_DIR}/${TEST_NAME}.c*")
    add_executable(${TEST_NAME} ${TEST_FILE})
    target_include_directories(${TEST_NAME} PRIVATE ${FORT_SRC_DIR})
    target_link_libraries(${TEST_NAME} PRIVATE fort-lib)
    sanitizer_flags(${TEST_NAME})
    add_test(${TEST_NAME} ${TEST_NAME})
endfunction()

fort_test(lex_test)
fort_test(parse_test)
fort_test(assemble_test)
